[project]
name = "griptape-nodes-library-testing"
version = "0.1.0"
description = "Testing and assertion nodes for Griptape Nodes"
authors = [{ name = "Griptape, Inc" }]
requires-python = "~=3.12"
dependencies = [
  "griptape-nodes>=0.77.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["griptape_nodes_library_testing"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # Pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = ["ruff>=0.8.0", "pytest"]
